# radio

./: .gitignore  Makefile  README.md
client/: CMakeLists.txt  StationClient.cc  client.cc  radio.grpc.pb.cc  radio.grpc.pb.h  radio.pb.cc  radio.pb.h
client/include/: StationClient.h
proto/: radio.proto
server/: go.mod  main.go  service.go
server/radio/: radio.pb.go  radio_grpc.pb.go
